--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             <button id="close-menu-btn"><i class="fa-solid fa-x"></i></button>
         </div>
     </nav>
-    <!-- ========= END OF NAV BAR =============-->
+    <!-- ================================ END OF NAV BAR ===========================================-->
 
     <section class="about__achievements">
         <div class="container about__achievements-container">
@@ -77,10 +77,137 @@
             </div>
         </div>
     </section>
+    <!-- ================================ END OF ACHIEVEMENTS ===========================================-->
 
 
+    <section class="team">
+        <h2> Cunoaște echipa</h2>
+        <div class="container team__container">
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm1.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Name Name</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </article>
 
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm2.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Name Name</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </article>
 
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/professor3.jpg" >
+                </div>
+                <div class="team__member-info">
+                    <h4>Name Name</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </article>
+
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm4.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Name Name</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </article>
+
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm5.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Name Name</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </article>
+
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm6.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Name Name</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </article>
+
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm7.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Name Name</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </article>
+
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm8.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Name Name</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </article>
+
+            
+        </div>
+    </section>
+
+    <!-- ================================ END OF MEMBERS ===========================================-->
 
 
 
