--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                         <span class="achievement__icon">
                             <i class="fa-solid fa-video"></i>
                         </span>
-                        <h3>450+</h3>
+                        <h3>0</h3>
                         <p>Cursuri</p>
                     </article>
 
@@ -60,7 +60,7 @@
                         <span class="achievement__icon">
                             <i class="fa-solid fa-users-rectangle"></i>
                         </span>
-                        <h3>30,000</h3>
+                        <h3>3</h3>
                         <p>Studenți</p>
                     </article>
 
@@ -68,7 +68,7 @@
                         <span class="achievement__icon">
                             <i class="fa-solid fa-award"></i>
                         </span>
-                        <h3>15</h3>
+                        <h3>1</h3>
                         <p>Premii</p>
                     </article>
 
@@ -85,11 +85,11 @@
         <div class="container team__container">
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/tm1.jpg" alt="">
+                    <img src="./images/adin2.jpg" alt="">
                 </div>
                 <div class="team__member-info">
-                    <h4>Name Name</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Liuță Adin </h4>
+                    <p>Studen</p>
                 </div>
                 <div class="team__member-socials">
                     <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
@@ -100,11 +100,11 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/tm2.jpg" alt="">
+                    <img src="./images/alexandra.jpg" alt="">
                 </div>
                 <div class="team__member-info">
-                    <h4>Name Name</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Florescu Alexandra</h4>
+                    <p>Studen</p>
                 </div>
                 <div class="team__member-socials">
                     <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
@@ -115,11 +115,11 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/professor3.jpg" >
+                    <img src="./images/albert.jpg" >
                 </div>
                 <div class="team__member-info">
-                    <h4>Name Name</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Dinulică Albert</h4> 
+                    <p>Student</p>
                 </div>
                 <div class="team__member-socials">
                     <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
@@ -128,81 +128,7 @@
                 </div>
             </article>
 
-            <article class="team__member">
-                <div class="team__member-image">
-                    <img src="./images/tm4.jpg" alt="">
-                </div>
-                <div class="team__member-info">
-                    <h4>Name Name</h4>
-                    <p>Expert Tutor</p>
-                </div>
-                <div class="team__member-socials">
-                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
-                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
-                </div>
-            </article>
-
-            <article class="team__member">
-                <div class="team__member-image">
-                    <img src="./images/tm5.jpg" alt="">
-                </div>
-                <div class="team__member-info">
-                    <h4>Name Name</h4>
-                    <p>Expert Tutor</p>
-                </div>
-                <div class="team__member-socials">
-                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
-                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
-                </div>
-            </article>
-
-            <article class="team__member">
-                <div class="team__member-image">
-                    <img src="./images/tm6.jpg" alt="">
-                </div>
-                <div class="team__member-info">
-                    <h4>Name Name</h4>
-                    <p>Expert Tutor</p>
-                </div>
-                <div class="team__member-socials">
-                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
-                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
-                </div>
-            </article>
-
-            <article class="team__member">
-                <div class="team__member-image">
-                    <img src="./images/tm7.jpg" alt="">
-                </div>
-                <div class="team__member-info">
-                    <h4>Name Name</h4>
-                    <p>Expert Tutor</p>
-                </div>
-                <div class="team__member-socials">
-                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
-                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
-                </div>
-            </article>
-
-            <article class="team__member">
-                <div class="team__member-image">
-                    <img src="./images/tm8.jpg" alt="">
-                </div>
-                <div class="team__member-info">
-                    <h4>Name Name</h4>
-                    <p>Expert Tutor</p>
-                </div>
-                <div class="team__member-socials">
-                    <a href="https://instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://youtube.com" target="_blank"> <i class="fa-brands fa-youtube"></i></a>
-                    <a href="https://facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
-                </div>
-            </article>
-
+            
             
         </div>
     </section>
