--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                     <img src="./images/5 SCENE.png" alt="">
                 </div>
                 <h2>Contactează-ne!</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore aut doloribus reiciendis. Quidem officiis repudiandae saepe fugiat ullam possimus perferendis.</p>
+                <p>Ai nevoie de ajutor sau vrei să ne pui o întrebare?</p>
                 <ul class="contact__details">
                     <li>
                         <i class="fa-solid fa-phone"></i>
