--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="container header__container">
             <div class="header__left">
                 <h1> Resurse educaționale formale și non-formale</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quam incidunt quos excepturi, sequi doloremque dicta sit cupiditate odio dolor architecto enim commodi, nostrum perspiciatis ipsam ullam sed, quas recusandae?</p>
-                <a href="courses.html" class="btn btn-primary"> Get Started</a>
+                <p>Bine ați venit în lumea învățării moderne, unde educația se întâlnește cu inovația! Aplicația noastră e-learning reprezintă puntea perfectă între cursurile educaționale formale și non-formale, oferindu-vă acces la o varietate de materiale de învățare captivante și interactive. Indiferent dacă explorați subiecte academice tradiționale sau vă aventurați în domenii creative și practice, această platformă vă oferă flexibilitatea de a învăța în ritmul și la nivelul vostru. Gata să vă începeți călătoria educațională?</p>
+                <a href="courses.html" class="btn btn-primary">Să începem!</a>
             </div>
 
             <div class="header__right">
@@ -65,48 +65,48 @@
     <section class="categories">
         <div class="container categories__container">
             <div class="categories__left">
-                <h1>Categories</h1>
+                <h1>Categorii</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vel, eius esse eveniet maxime nostrum? Voluptatem nemo, autem necessitatibus architecto culpa ullam. Architecto debitis iusto vero neque! Deleniti, aut eos.
+                    Explorează o varietate captivantă de categorii în secțiunea noastră e-learning! De la științe la artă și tehnologie, găsește cursuri care să se potrivească intereselor și obiectivelor tale educaționale. Cunoașterea ta personalizată, doar la un clic distanță!
                 </p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="#" class="btn">Vezi mai mult</a>
             </div>
 
             <div class="categories__right">
                 <article class="category">
-                    <span class="category__icon"><i class="fa-brands fa-hive"></i></span>
-                    <h5>Blockchain</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, eius?</p>
+                    <span class="category__icon"><i class="fa-solid fa-terminal"></i></span>
+                    <h5>Coding</h5>
+                    <p>Cursuri de programare pe înțelesul tuturor.</p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="fa-solid fa-palette"></i></span>
-                    <h5>Graphic Design</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, eius?</p>
+                    <h5>Educație plastică și vizuală</h5>
+                    <p>Cursuri despre imporanța educației vizuale și cum aplicăm educația plastică în viețile noastre</p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="fa-solid fa-coins"></i></span>
-                    <h5>Finance</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, eius?</p>
+                    <h5>Finante</h5>
+                    <p>Învață ce sunt banii și cum sa îi gestionezi.</p>
                 </article>
 
                 <article class="category">
-                    <span class="category__icon"><i class="fa-solid fa-chart-simple"></i></span>
+                    <span class="category__icon"><i class="fa-solid fa-flask"></i></span>
                     <h5>Marketing</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, eius?</p>
+                    <p>Cursuri de știință aplicată în viețile noastre.</p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="fa-solid fa-music"></i></span>
-                    <h5>Music</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, eius?</p>
+                    <h5>Muzică</h5>
+                    <p>Învață ce sunt notele muzicale si cum să cânți la un instrument </p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="fa-solid fa-user-tie"></i></span>
                     <h5>Business</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, eius?</p>
+                    <p>Concepte de bază antreprenorială, strategii de marketing și abilități de leadership.</p>
                 </article>
             </div>
         </div>
@@ -169,7 +169,18 @@
             <article class="faq">
                 <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
+                    <h4>De ce ar trebui să folosesc această aplicație de e-learning în loc să învăț tradițional la școală?</h4>
+                    <p>
+                        Această aplicație de e-learning nu își propune să înlocuiască sistemul tradițional de învățare școlară, ci să îl completeze și să îmbunătățească experiența educațională. Prin utilizarea acestei aplicații, vei beneficia de resurse suplimentare, explicații detaliate și materiale interactive, oferindu-ți șansa de a explora subiecte în profunzime sau de a aborda noi domenii de interes. Este o oportunitate de a-ți personaliza învățarea, de a consolida cunoștințele dobândite la școală și de a dezvolta abilități într-un mod adaptat ritmului tău propriu de învățare. Astfel, această aplicație vine în sprijinul educației tradiționale, oferind un cadru suplimentar și flexibil pentru a-ți dezvolta cunoștințele și aptitudinile.                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
+                <div class="question__answer">
+                    <h4>Cum pot să știu că informațiile pe care le găsesc în aplicație sunt corecte și înțelegătoare pentru vârsta mea?
+
+                    </h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
                     </p>
@@ -179,7 +190,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
+                    <h4>Pot alege eu ce să învăț sau există un program fix pe care trebuie să-l urmez?</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
                     </p>
@@ -189,7 +200,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
+                    <h4>Cum funcționează evaluările și cum știu că am înțeles bine materia?</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
                     </p>
@@ -199,7 +210,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
+                    <h4>Există activități interactive sau jocuri educative în aplicație care să facă învățarea mai distractivă?</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
                     </p>
@@ -209,7 +220,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
+                    <h4>Dacă mă înscriu la un curs, pot să-l parcurg în ritmul meu sau trebuie să mă țin de un program prestabilit?</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
                     </p>
@@ -219,17 +230,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
-                    </p>
-                </div>
-            </article>
-
-            <article class="faq">
-                <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
-                <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
+                    <h4>Pot să accesez această aplicație de pe mai multe dispozitive, cum ar fi tableta sau telefonul mobil?</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
                     </p>
@@ -240,32 +241,14 @@
             <article class="faq">
                 <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
+                    <h4>Există profesori sau mentori disponibili online dacă am întrebări sau dacă am nevoie de ajutor?</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
                     </p>
                 </div>
             </article>
 
-            <article class="faq">
-                <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
-                <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
-                    </p>
-                </div>
-            </article>
-
-            <article class="faq">
-                <div class="faq__icon"><i class="fa-solid fa-plus"></i></div>
-                <div class="question__answer">
-                    <h4>How do I know the right courses for me</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
-                    </p>
-                </div>
-            </article>
+           
         </div>
     </section>
             <!-- ========= END OF FAQs =============-->
