--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <article class="category">
                     <span class="category__icon"><i class="fa-solid fa-palette"></i></span>
                     <h5>Educație plastică și vizuală</h5>
-                    <p>Cursuri despre imporanța educației vizuale și cum aplicăm educația plastică în viețile noastre</p>
+                    <p>Cursuri despre importanța educației vizuale și cum aplicăm educația plastică în viețile noastre</p>
                 </article>
 
                 <article class="category">
@@ -111,6 +111,7 @@
             </div>
         </div>
     </section>
+    
         <!-- ========= END OF CATEGORIES =============-->
 
     <section class="courses">
@@ -222,7 +223,7 @@
                 <div class="question__answer">
                     <h4>Dacă mă înscriu la un curs, pot să-l parcurg în ritmul meu sau trebuie să mă țin de un program prestabilit?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolorem voluptate suscipit obcaecati reiciendis facere perspiciatis molestiae velit voluptas accusamus? Ex, adipisci voluptates quas eius velit voluptatem recusandae repudiandae quibusdam?
+                        
                     </p>
                 </div>
             </article>
