--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 
             <article class="team__member">
                 <div class="team__member-image">
-                    <img src="./images/albert.jpg" >
+                    <img src="./images/albert2.jpg" >
                 </div>
                 <div class="team__member-info">
                     <h4>Dinulică Albert</h4> 
